--- a/app/views/devise_token_auth/omniauth_success.html.erb
+++ b/app/views/devise_token_auth/omniauth_success.html.erb
@@ -1,7 +1,7 @@
 message:    "deliverCredentials",
 uid:        "<%= @user.uid %>",
 email:      "<%= @user.email %>",
-auth_token: "<%= @user.auth_token %>",
+auth_token: "<%= @token %>",
 avatar_url: "<%= @user.image %>",
 nickname:   "<%= @user.nickname %>",
 name:       "<%= @user.name %>"
