allow for multiple simultaneous sessions per user

--- a/app/views/devise_token_auth/omniauth_success.html.erb
+++ b/app/views/devise_token_auth/omniauth_success.html.erb
@@ -2,6 +2,7 @@ message:    "deliverCredentials",
 uid:        "<%= @user.uid %>",
 email:      "<%= @user.email %>",
 auth_token: "<%= @token %>",
+client_id:  "<%= @client_id %>",
 avatar_url: "<%= @user.image %>",
 nickname:   "<%= @user.nickname %>",
 name:       "<%= @user.name %>"
