fix bug with postMessage params

--- a/app/views/devise_token_auth/omniauth_success.html.erb
+++ b/app/views/devise_token_auth/omniauth_success.html.erb
@@ -3,6 +3,6 @@ uid:        "<%= @user.uid %>",
 email:      "<%= @user.email %>",
 auth_token: "<%= @token %>",
 client_id:  "<%= @client_id %>",
-avatar_url: "<%= @user.image %>",
+image:      "<%= @user.image %>",
 nickname:   "<%= @user.nickname %>",
 name:       "<%= @user.name %>"
