--- a/app/views/devise_token_auth/omniauth_success.html.erb
+++ b/app/views/devise_token_auth/omniauth_success.html.erb
@@ -1,8 +1,6 @@
-message:    "deliverCredentials",
-uid:        "<%= @user.uid %>",
-email:      "<%= @user.email %>",
-auth_token: "<%= @token %>",
-client_id:  "<%= @client_id %>",
-image:      "<%= @user.image %>",
-nickname:   "<%= @user.nickname %>",
-name:       "<%= @user.name %>"
+<% @user.as_json.each do |attr, val| %>
+  "<%= attr %>": "<%= val %>",
+<% end %>
+
+"message":    "deliverCredentials",
+"client_id":  "<%= @client_id %>"
