--- a/app/views/devise_token_auth/omniauth_success.html.erb
+++ b/app/views/devise_token_auth/omniauth_success.html.erb
@@ -2,5 +2,6 @@
   "<%= attr %>": "<%= val %>",
 <% end %>
 
+"auth_token": "<%= @token %>",
 "message":    "deliverCredentials",
 "client_id":  "<%= @client_id %>"
