--- a/app/views/devise_token_auth/omniauth_success.html.erb
+++ b/app/views/devise_token_auth/omniauth_success.html.erb
@@ -4,4 +4,5 @@
 
 "auth_token": "<%= @token %>",
 "message":    "deliverCredentials",
-"client_id":  "<%= @client_id %>"
+"client_id":  "<%= @client_id %>",
+"expiry":     "<%= @expiry %>"
