--- a/app/views/devise_token_auth/omniauth_success.html.erb
+++ b/app/views/devise_token_auth/omniauth_success.html.erb
@@ -5,4 +5,5 @@
 "auth_token": "<%= @token %>",
 "message":    "deliverCredentials",
 "client_id":  "<%= @client_id %>",
-"expiry":     "<%= @expiry %>"
+"expiry":     "<%= @expiry %>",
+"config":     "<%= @config %>"
