--- a/app/views/devise_token_auth/omniauth_success.html.erb
+++ b/app/views/devise_token_auth/omniauth_success.html.erb
@@ -1,5 +1,5 @@
 <% @resource.as_json.each do |attr, val| %>
-  "<%= attr %>": "<%= val %>",
+    "<%= attr %>": <%= val.to_json.html_safe %>,
 <% end %>
 
 "auth_token": "<%= @token %>",
