change name from new_record to oauth_registration, only include it when true, and make sure that it is in the auth_origin_url query params

--- a/app/views/devise_token_auth/omniauth_success.html.erb
+++ b/app/views/devise_token_auth/omniauth_success.html.erb
@@ -6,5 +6,8 @@
 "message":    "deliverCredentials",
 "client_id":  "<%= @client_id %>",
 "expiry":     "<%= @expiry %>",
-"config":     "<%= @config %>",
-"new_record":     <%= @new_record.to_s %>
+<% if @oauth_registration %>
+"oauth_registration": "true",
+<% end %>
+"config":     "<%= @config %>"
+
