Added json support for tokens
In the installation generator script, the migration template checks to
see if the app is using postgres by seeing what sub-class of
``ActiveRecord::ConnectionAdapter`` the app is using. If it is postgres, or mysql with the correct version, the app will use a token column instead of a text one

Postgres has JSON types as of 9.3
Mysql has JSON types as of 5.7.7
http://mysqlserverteam.com/json-labs-release-native-json-data-type-and-binary-format/

teeny refactoring

--- a/lib/generators/devise_token_auth/templates/devise_token_auth_create_users.rb.erb
+++ b/lib/generators/devise_token_auth/templates/devise_token_auth_create_users.rb.erb
@@ -40,7 +40,7 @@ class DeviseTokenAuthCreate<%= user_class.pluralize %> < ActiveRecord::Migration
       t.string :email
 
       ## Tokens
-      t.text :tokens
+      <%= json_supported_database? ? 't.json :tokens' : 't.text :tokens' %>
 
       t.timestamps
     end
