fix(omniauth): fix error in setting text on redirect page

--- a/app/views/devise_token_auth/omniauth_external_window.html.erb
+++ b/app/views/devise_token_auth/omniauth_external_window.html.erb
@@ -27,7 +27,7 @@
         return data;
       }
       setTimeout(function() {
-        window.getElementById('text').innerHTML = 'Redirecting...';
+        document.getElementById('text').innerHTML = (data && data.error) || 'Redirecting...';
       }, 1000);
     </script>
   </head>
