Allow resources to auth with multiple methods
This change allows resources (e.g. User) to authenticate through
multiple methods for the same real life person. Prior to this, each auth
method (e.g. facebook, twitter, etc) would create a new row in User when
it was used.

See notes in the README that have changed for this commit for more
information.

--- a/lib/generators/devise_token_auth/templates/devise_token_auth_create_users.rb.erb
+++ b/lib/generators/devise_token_auth/templates/devise_token_auth_create_users.rb.erb
@@ -1,7 +1,9 @@
 class DeviseTokenAuthCreate<%= user_class.pluralize %> < ActiveRecord::Migration<%= "[#{Rails::VERSION::STRING[0..2]}]" if Rails::VERSION::MAJOR > 4 %>
   def change
     create_table(:<%= user_class.pluralize.underscore %>) do |t|
-      ## Required
+      ## Required if using single method authentication per resource. See
+      #  "Single vs Multiple authentication methods per resource" in the README
+      #  for more information.
       t.string :provider, :null => false, :default => "email"
       t.string :uid, :null => false, :default => ""
 
