fixed undefined method devise

--- a/lib/generators/devise_token_auth/templates/user.rb.erb
+++ b/lib/generators/devise_token_auth/templates/user.rb.erb
@@ -1,6 +1,8 @@
 # frozen_string_literal: true
 
 class <%= user_class %> < ActiveRecord::Base
+  extend Devise::Models
+  
   # Include default devise modules. Others available are:
   # :confirmable, :lockable, :timeoutable and :omniauthable
   devise :database_authenticatable, :registerable,
